# sparkenv

./: Cargo.toml  README.md
src/: app_config.rs  cli.rs  file_utils.rs  main.rs  spark_downloader.rs
src/app_config/: app_config.rs
