[package]
name = "sparkenv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
directories = "5.0.1"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
select = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
